2018-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/affine.cpp (affineWithRebuiltCurveEngine): Remove
	declaration and assignment of one unused variable
	* src/bermudan.cpp (bermudanFromYieldEngine): Idem

2018-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/affine.cpp: Use #include <rquantlib_internal.h>
	* src/asian.cpp: Idem
	* src/barrier_binary.cpp: Idem
	* src/bermudan.cpp: Idem
	* src/bonds.cpp: Idem
	* src/calendars.cpp: Idem
	* src/curves.cpp: Idem
	* src/dates.cpp: Idem
	* src/daycounter.cpp: Idem
	* src/discount.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/implieds.cpp: Idem
	* src/modules.cpp: Idem
	* src/sabr.cpp: Idem
	* src/schedule.cpp: Idem
	* src/utils.cpp: Idem
	* src/vanilla.cpp: Idem
	* src/zero.cpp: Idem

	* src/deprecated/rquantlib.h: Moved from src/

2017-11-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.4

        * configure.ac: Mark as 0.4.4
        * configure: Rebuilt

	* README.md: Minor edits

	* src/utils.cpp: Corrected deprecation of Actual365NoLeap()

2017-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/utils.cpp (getDayCounter): Deprecate Actual365NoLeap() as
	needed for use with QuantLib 1.11

	* man/Enum.Rd: Mark as deprecated Actual365NoLeap()
	* man/BondUtilities.Rd: Note that Actual365NoLeap() deprecated

2017-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* NAMESPACE: Set .registration=TRUE
	* R/RcppExports.R: Updated again with .registration=TRUE

2017-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/affine.cpp (affineWithRebuiltCurveEngine): Correction to BKTree
	* src/RcppExports.cpp: Updated with current Rcpp Attributes
	* inst/include/RQuantLib_RcppExports.h: Ditto
	* R/RcppExports.R: Ditto

2017-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https to download
