@@ -3,6 +3,8 @@
 	* src/affine.cpp (affineWithRebuiltCurveEngine): Remove
 	declaration and assignment of one unused variable
 	* src/bermudan.cpp (bermudanFromYieldEngine): Idem
+	* src/sabr.cpp (sabrengine): Idem (twice); also rename one
+	variable ('todaysDate') to its parameter name ('tradeDate')
 
 2018-01-01  Dirk Eddelbuettel  <edd@debian.org>
 
